# clcontext

./: .gitignore  CMakeLists.txt  clcontext.c  clcontext.h
src/: CMakeLists.txt  clcontext.h
test/: CMakeLists.txt  test_1_init_opencl.c
test/cl/: hello.cl  hello.h  hello_n.cl  hello_n_l.cl
